--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="{{ '/assets/css/terminal.css' | relative_url }}" />
     {% seo %}
-    
+
     <!-- Cloudflare Turnstile Global Script -->
     <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
   </head>
@@ -79,6 +79,8 @@
     <!-- Main JavaScript with Turnstile callbacks -->
     <script src="{{ '/assets/js/main.js' | relative_url }}" defer></script>
 
-    {% if page.typing_effect %}\n    <script src="{{ '/assets/js/terminal.js' | relative_url }}"></script>\n    {% endif %}
+    {% if page.typing_effect %}
+    <script src="{{ '/assets/js/terminal.js' | relative_url }}"></script>
+    {% endif %}
   </body>
 </html>
